Докер запускается через отдельный файл запуска